--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>Projekt ten sluzy do eksperymentowania i poszerzania wiedzy odnosnie phalcona, php,css,javasriptu i pewnie dojda do tego jeszcze jakeis framweowrki czy cos :)
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Struktura strony:</p>
 
-<p>Projekt ten sluzy do eksperymentowania i poszerzania wiedzy odnosnie phalcona, php,css,javasriptu i pewnie dojda do tego jeszcze jakeis framweowrki czy cos :)</p>
+<ul>
+<li>Menu (wykorzystujące Persident header)</li>
+<li>Naglowek</li>
+<li>Newsy * Panel boczny</li>
+<li>Stopka</li>
+</ul>
       </section>
     </div>
 
